--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
 
   <title>DevCast</title>
   
+  <!-- vendors -->
   <script src="http://code.jquery.com/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="http://underscorejs.org/underscore.js" type="text/javascript" charset="utf-8"></script>
   <script src="http://backbonejs.org/backbone.js" type="text/javascript" charset="utf-8"></script>
+
+  <!-- app -->
   <script src="app.js" type="text/javascript" charset="utf-8"></script>
+  <script src="models.js" type="text/javascript" charset="utf-8"></script>
+  <script src="collections.js" type="text/javascript" charset="utf-8"></script>
+  <script src="views.js" type="text/javascript" charset="utf-8"></script>
+
+  <script type="text/javascript" charset="utf-8">
+    $(function() {
+      App.start('#app', {screen_name: 'DevCastBrasil'}); 
+    });
+  </script>
 </head>
 <body>
   <div id="app">
