--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       App.start('#app', {screen_name: 'DevCastBrasil'}); 
     });
   </script>
+
+  <style type="text/css" media="all"> @import url(app.css);</style>
 </head>
 <body>
   <div id="app">
