--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-  <title>DevCast</title>
+  <title>DevCast - Backbone Example</title>
   
   <!-- vendors -->
   <script src="http://code.jquery.com/jquery.js" type="text/javascript" charset="utf-8"></script>
