--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <script type="text/javascript" charset="utf-8">
     $(function() {
-      App.start('#app', {screen_name: 'DevCastBrasil'}); 
+      $('#app').twitterList({screen_name: 'DevCastBrasil'});
     });
   </script>
 
